--- a/config.yml
+++ b/config.yml
@@ -14,6 +14,7 @@ settings:
     login-system: true 
     max-ip-accounts: 2
     max-connections: 15
+    website-register: false
     switch-server-timeout: 200
     login:
         commands:
@@ -49,9 +50,10 @@ settings:
             - unreg
 messages:
     reload: '&a&lServer reload! &aJoin again!'
-    servers-not-responsing: '&c&lError &cAuthentication servers do not respond, we can not verify your account!'
-    max-ip-accounts: '&c&lError &cYour ip address has already been registered with the maximum number of accounts!'
-    max-connections: '&c&lError &cToo many players want to connection to the server now! Please wait and try again!'
+    servers-not-responsing: '&c&lError! &cAuthentication servers do not respond, we can not verify your account!'
+    max-ip-accounts: '&c&lError! &cYour ip address has already been registered with the maximum number of accounts!'
+    max-connections: '&c&lError! &cToo many players want to connection to the server now! Please wait and try again!'
+    website-register: '&a&lWebsite Register! &aPlease visit www.example.com/register to register your account!'
     premium:
         login:
             fadeIn: 1
