--- a/example_bungeecord_config.yml
+++ b/example_bungeecord_config.yml
@@ -4,8 +4,12 @@ servers:
         motd: 'Lobby server'
         address: localhost:25565
         restricted: false
-    login: #BungeeCord server name
+   register: #BungeeCord server name
         motd: 'Login server'
         address: localhost:25566
+        restricted: false
+    login: #BungeeCord server name
+        motd: 'Login server'
+        address: localhost:25567
         restricted: false
 [...]
